force-app/main/default/objects/Shipping_Order__c/Shipping_Order__c.object-meta.xml
<CustomObject>
    <label>Shipping Order</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>