force-app/main/default/objects/Shipping_Order__c/fields/Actual_TEU__c.field-meta.xml
<CustomField>
    <fullName>Actual_TEU__c</fullName>
    <label>Actual TEU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>