force-app/main/default/objects/Shipping_Order__c/fields/Delivered_by__c.field-meta.xml
<CustomField>
    <fullName>Delivered_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivered by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Orders</relationshipLabel>
    <relationshipName>Shipping_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>