force-app/main/default/objects/Shipping_Order__c/fields/Planned_TEU__c.field-meta.xml
<CustomField>
    <fullName>Planned_TEU__c</fullName>
    <label>Planned TEU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>