force-app/main/default/objects/Shipping_Order__c/fields/Received_by__c.field-meta.xml
<CustomField>
    <fullName>Received_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Received by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Orders (Received by)</relationshipLabel>
    <relationshipName>Shipping_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>