force-app/main/default/objects/Shipping_Order__c/fields/Shipping_Project__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Project__c</fullName>
    <label>Shipping Project</label>
    <referenceTo>Shipping_Project__c</referenceTo>
    <relationshipLabel>Shipping Orders</relationshipLabel>
    <relationshipName>Shipping_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>