force-app/main/default/objects/Shipping_Order__c/fields/Types_of_goods__c.field-meta.xml
<CustomField>
    <fullName>Types_of_goods__c</fullName>
    <label>Types of goods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>food</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>car</fullName>
            </value>
            <value>
                <fullName>animal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>