force-app/main/default/objects/Shipping_Order__c/listViews/Shipping_Orders_List.listView-meta.xml
<ListView>
    <fullName>Shipping_Orders_List</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Types_of_goods__c</columns>
    <columns>Actual_TEU__c</columns>
    <columns>Planned_TEU__c</columns>
    <filterScope>Mine</filterScope>
    <label>Shipping Orders List</label>
</ListView>